--- a/example/docker-compose.yml
+++ b/example/docker-compose.yml
@@ -18,6 +18,17 @@
 version: "3"
 
 services:
+
+  apisix-dashboard:
+    image: apache/apisix-dashboard:2.10.1-alpine
+    restart: always
+    volumes:
+    - ./dashboard_conf/conf.yaml:/usr/local/apisix-dashboard/conf/conf.yaml
+    ports:
+    - "9000:9000"
+    networks:
+      apisix:
+  
   apisix:
     image: apache/apisix:${APISIX_IMAGE_TAG:-3.11.0-debian}
     restart: always
@@ -49,52 +60,46 @@ services:
       - "2379:2379/tcp"
     networks:
       apisix:
-
-  web1:
-    image: nginx:1.19.0-alpine
-    restart: always
-    volumes:
-      - ./upstream/web1.conf:/etc/nginx/nginx.conf
+  
+  account-api-container:
+    image: shivasai/account-api-camel-img:latest
     ports:
-      - "9081:80/tcp"
+      - "8001:8001"
+    networks:
+      apisix:
+    # environment:
+    #   -
+
+  integration-db:
+    image: shivasai/mysql:latest
+    ports:
+      - "3306:3306"
     environment:
-      - NGINX_PORT=80
+      - MYSQL_ROOT_PASSWORD=arun123
+      - MYSQL_DATABASE=integration_poc
+    volumes:
+      - ./volumes/database:/var/lib/mysql
+      - ./data-schema.sql:/docker-entrypoint-initdb.d/data-schema.sql
     networks:
       apisix:
-
-  web2:
-    image: nginx:1.19.0-alpine
-    restart: always
-    volumes:
-      - ./upstream/web2.conf:/etc/nginx/nginx.conf
+  
+  payment-api-container:
+    image: shivasai/payment-api-camel-img:latest
     ports:
-      - "9082:80/tcp"
+      - "8006:8006"
+  
+  keycloak:
+    image: quay.io/keycloak/keycloak:latest
+    ports:
+      - "8080:8080"
     environment:
-      - NGINX_PORT=80
-    networks:
-      apisix:
-
-  prometheus:
-    image: prom/prometheus:v2.25.0
-    restart: always
+      KEYCLOAK_ADMIN: admin
+      KEYCLOAK_ADMIN_PASSWORD: admin
     volumes:
-      - ./prometheus_conf/prometheus.yml:/etc/prometheus/prometheus.yml
-    ports:
-      - "9090:9090"
+      - keycloak_data:/opt/keycloak/data
     networks:
       apisix:
-
-  grafana:
-    image: grafana/grafana:7.3.7
-    restart: always
-    ports:
-      - "3000:3000"
-    volumes:
-      - "./grafana_conf/provisioning:/etc/grafana/provisioning"
-      - "./grafana_conf/dashboards:/var/lib/grafana/dashboards"
-      - "./grafana_conf/config/grafana.ini:/etc/grafana/grafana.ini"
-    networks:
-      apisix:
+    command: start-dev
 
 networks:
   apisix:
@@ -103,3 +108,4 @@ networks:
 volumes:
   etcd_data:
     driver: local
+  keycloak_data:
